@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="DatabaseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchemaTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AjBase\AjBase.csproj">
