@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Column.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="Engine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Row.cs" />
     <Compile Include="Schema.cs" />
